# UpdateHauler

./: .gitignore  ARCHITECTURE_REVIEW.md  CHANGELOG.md  CLI_DESIGN.md  CONTRIBUTING.md  Cargo.toml  HYBRID_DESIGN.md  IMPLEMENTATION_STATUS.md  LICENSE  MIGRATION.md  PLUGIN_DEV.md  README.md  SECURITY.md  dev-validator  package-lock.json  test_completions.sh  test_release.sh
.github/: dependabot.yml
.github/workflows/: coverage.yml  pr-validation.yml  pr.yml  release.yml
examples/: config.yaml
scripts/: validate.sh
src/: config.rs  insights.rs  lib.rs  logger.rs  main.rs  package_manager.rs  scheduler.rs  self_install.rs  utils.rs
src/plugins/: brew.rs  cargo.rs  deno.rs  docker.rs  flatpak.rs  gem.rs  go.rs  mod.rs  npm.rs  nvim.rs  os.rs  pip.rs  ruby.rs  run.rs  rustup.rs  snap.rs  uv.rs  vscode.rs  yarn.rs
tests/: config_test.rs  insights_test.rs  integration_test.rs  logger_test.rs  package_manager_test.rs  plugin_registry_test.rs  plugins_test.rs  schedule_args_test.rs  scheduler_test.rs  self_install_test.rs  utils_test.rs
