[package]
name = "update_hauler"
version = "0.1.0"
edition = "2021"
description = "System package update manager for macOS and Linux"
authors = ["Frank"]
license = "Apache-2.0"
repository = "https://github.com/franksplace/UpdateHauler"

[[bin]]
name = "updatehauler"
path = "src/main.rs"

[lib]
name = "update_hauler"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
colored = "2.1"
chrono = "0.4"
anyhow = "1.0"
dirs = "5.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
which = "6.0"
lazy_static = "1.5"
duct = "0.13"
regex = "1.11"
sys-info = "0.9"
nix = { version = "0.29", features = ["user"] }
tempfile = "3.14"
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }

[dev-dependencies]
cargo-tarpaulin = "0.27"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
