[package]
name = "updatehauler"
version = "0.3.1"
edition = "2024"
description = "System package update manager for macOS and Linux"
authors = ["FrankStutz"]
license = "Apache-2.0"
repository = "https://github.com/franksplace/UpdateHauler"

[[bin]]
name = "updatehauler"
path = "src/main.rs"

[lib]
name = "updatehauler"
path = "src/lib.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
clap_complete = "4.5"
colored = "3.1"
chrono = "0.4"
anyhow = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-saphyr = "0.0.29"
which = "8.0"
duct = "1.1"
strsim = "0.11"
nix = { version = "0.31", features = ["user"] }
async-trait = "0.1"
tokio = { version = "1.40", features = ["full"] }
atty = "0.2"

[dev-dependencies]
tempfile = "3.14"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
